# cuda_ndt_matcher

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  justfile
.config/: nextest.toml
data/: .gitignore  extract.sh
docs/: architecture.md  autoware-comparison.md  autoware-ndt-tutorial.org  autoware_vs_cuda_comparison.md  cubecl-ndt-roadmap.md  integration.md  profiling-results.md  roadmap.md
docs/archive/: github.theme  phase-13-gpu-scoring-pipeline.md  phase-17-kernel-optimization.md  phase-18-persistent-kernel-features.md  phase-25-code-restructure.md  phase-26-nextest-migration.md  phase-27-cpu-parallelism.md  phase-28-legacy-kernel-cleanup.md
docs/debug/: debug-feature-comparison.md
docs/guides/: rosbag-replay-guide.md
docs/reference/: architecture.md  features-list.md  kernel-inventory.md  overview.md
docs/roadmap/: README.md  phase-12-gpu-derivative-pipeline.md  phase-14-iteration-optimization.md  phase-15-gpu-line-search.md  phase-19-4-debug-buffer-design.md  phase-19-cleanup.md  phase-22-batch-alignment.md  phase-23-gpu-utilization.md  phase-24-cuda-graphs-pipeline.md  phase-25-code-restructure.md  phase-9-gpu-acceleration.md
scripts/: activate_autoware.sh  analyze_profile.py  analyze_resource_usage.py  analyze_system_stats.py  analyze_tegrastats_cpu.py  collect_ground_truth.sh  compare_init_poses.py  compare_ndt.py  compare_timestamps.py  download_sample_data.sh  ndt_topics.sh  profile_ndt.sh  profile_ndt_comparison.py  run_demo.sh  run_ndt_simulation.sh  run_with_tegrastats.sh
scripts/analysis/: analyze_drift.py  analyze_early_frames.py  check_motion.py  check_prev_ndt.py  compare_debug_logs.py  compare_poses.py  find_divergence.py
src/: Cargo.toml
src/cuda_ffi/: Cargo.toml  build.rs
src/cuda_ffi/csrc/: async_stream.cu  batch_persistent_ndt.cu  cholesky_6x6.cuh  (+5 more)
src/cuda_ndt_matcher/: Cargo.toml  package.xml
src/cuda_ndt_matcher_launch/: CMakeLists.txt  README.md  package.xml
src/cuda_ndt_matcher_launch/config/: ndt_scan_matcher.param.yaml
src/cuda_ndt_matcher_launch/launch/: autoware_localization.launch.xml  cuda_localization.launch.xml  cuda_ndt_scan_matcher.launch.xml  ndt_replay_simulation.launch.xml  ndt_scan_matcher.launch.xml  pose_estimator.launch.xml
src/ndt_cuda/: Cargo.toml
src/rosbag_sensor_kit_description/: CMakeLists.txt  package.xml
src/rosbag_sensor_kit_launch/: CMakeLists.txt  README.md  package.xml
src/rosbag_sensor_kit_launch/launch/: lidar.launch.xml  pointcloud_preprocessor.launch.py  sensing.launch.xml
tests/: conftest.py  pytest.ini  requirements.txt  test_cuda_ndt.py
tests/comparison/: .gitignore  justfile
tests/utils/: __init__.py  debug_parser.py  metrics.py  rosbag_parser.py
(+105 files in other folders)
