<?xml version="1.0"?>
<package format="3">
  <name>cuda_ndt_matcher_launch</name>
  <version>0.1.0</version>
  <description>Launch files for cuda_ndt_matcher</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cuda_ndt_matcher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
