<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag_sensor_kit_launch</name>
  <version>0.1.0</version>
  <description>Customized sensor kit launch for rosbag replay (3 LiDARs: top, left, right)</description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_pointcloud_preprocessor</exec_depend>
  <exec_depend>autoware_vehicle_velocity_converter</exec_depend>
  <exec_depend>common_sensor_launch</exec_depend>
  <exec_depend>sample_sensor_kit_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
